IMPALA-2878: Fix Base64Decode error and remove duplicate codes.

Original impala::Base64Decode() method wouldn't return original
string if there were trailing '\0'. For example, string "a\0" would
be encoded into "YQA=", while calling original Base64Decode() method,
the return value is "a", which losts the trailing '\0' of original
string "a\0". Besides, this commit remove duplicate codes of function
impala::Base64En/Decode() and impala::StringFunctions::Base64En/Decode()

Change-Id: I0170a7d180ab048d0ff2196a24ddc53626aa7aab
Reviewed-on: http://gerrit.cloudera.org:8080/3824
Reviewed-by: Yuanhao Luo <luoyuanhao@software.ict.ac.cn>
Reviewed-by: Jim Apple <jbapple@cloudera.com>
Tested-by: Internal Jenkins