be/src/util/coding-util.cc
@@ -12,23 +12,19 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-#include "util/url-coding.h"
+#include "util/coding-util.h"
 
 #include <exception>
 #include <sstream>
 #include <boost/algorithm/string.hpp>
-#include <boost/archive/iterators/base64_from_binary.hpp>
-#include <boost/archive/iterators/binary_from_base64.hpp>
-#include <boost/archive/iterators/transform_width.hpp>
 
+#include "common/compiler-util.h"
 #include "common/logging.h"
 
 #include "common/names.h"
+#include "sasl/saslutil.h"
 
 using boost::algorithm::is_any_of;
-using boost::archive::iterators::base64_from_binary;
-using boost::archive::iterators::binary_from_base64;
-using boost::archive::iterators::transform_width;
 using namespace impala;
 using std::uppercase;
 
@@ -106,21 +102,46 @@ bool UrlDecode(const string& in, string* out, bool hive_compat) {
   return true;
 }
 
-static inline void Base64Encode(const char* in, int in_len, stringstream* out) {
-  typedef base64_from_binary<transform_width<const char*, 6, 8>> base64_encode;
-  // Base64 encodes 8 byte chars as 6 bit values.
-  stringstream::pos_type len_before = out->tellp();
-  copy(base64_encode(in), base64_encode(in + in_len), std::ostream_iterator<char>(*out));
-  int bytes_written = out->tellp() - len_before;
-  // Pad with = to make it valid base64 encoded string
-  int num_pad = bytes_written % 4;
-  if (num_pad != 0) {
-    num_pad = 4 - num_pad;
-    for (int i = 0; i < num_pad; ++i) {
-      (*out) << "=";
-    }
+bool Base64EncodeBufLen(int64_t in_len, int64_t* out_max) {
+  // Base64 encoding turns every 3 bytes into 4 characters. If the length is not
+  // divisible by 3, it pads the input with extra 0 bytes until it is divisible by 3.
+  // One more character must be allocated to account for Base64Encode's null-padding
+  // of its output.
+  *out_max = 1 + 4 * ((in_len + 2) / 3);
+  if (UNLIKELY(in_len < 0 ||
+        *out_max > static_cast<unsigned>(std::numeric_limits<int>::max()))) {
+    return false;
   }
-  DCHECK_EQ((out->tellp() - len_before) % 4, 0);
+  return true;
+}
+
+bool Base64Encode(const char* in, int64_t in_len, int64_t out_max, char* out,
+    int64_t* out_len) {
+  if (UNLIKELY(in_len < 0 || in_len > std::numeric_limits<unsigned>::max() ||
+        out_max < 0 || out_max > std::numeric_limits<unsigned>::max())) {
+    return false;
+  }
+  const int encode_result = sasl_encode64(in, static_cast<unsigned>(in_len), out,
+      static_cast<unsigned>(out_max), reinterpret_cast<unsigned*>(out_len));
+  if (UNLIKELY(encode_result != SASL_OK || *out_len != out_max - 1)) return false;
+  return true;
+}
+
+static inline void Base64Encode(const char* in, int64_t in_len, stringstream* out) {
+  if (in_len == 0) {
+    (*out) << "";
+    return;
+  }
+  int64_t out_max = 0;
+  if (UNLIKELY(!Base64EncodeBufLen(in_len, &out_max))) return;
+  string result(out_max, '\0');
+  int64_t out_len = 0;
+  if (UNLIKELY(!Base64Encode(in, in_len, out_max, const_cast<char*>(result.c_str()),
+          &out_len))) {
+    return;
+  }
+  result.resize(out_len);
+  (*out) << result;
 }
 
 void Base64Encode(const vector<uint8_t>& in, string* out) {
@@ -151,26 +172,30 @@ void Base64Encode(const string& in, stringstream* out) {
   Base64Encode(in.c_str(), in.size(), out);
 }
 
-bool Base64Decode(const string& in, string* out) {
-  typedef transform_width<
-      binary_from_base64<string::const_iterator> , 8, 6> base64_decode;
-  string tmp = in;
-  // Replace padding with base64 encoded NULL
-  replace(tmp.begin(), tmp.end(), '=', 'A');
-  try {
-    *out = string(base64_decode(tmp.begin()), base64_decode(tmp.end()));
-  } catch(std::exception& e) {
-    return false;
+bool Base64DecodeBufLen(const char* in, int64_t in_len, int64_t* out_max) {
+  // Base64 decoding turns every 4 characters into 3 bytes. If the last character of the
+  // encoded string is '=', that character (which represents 6 bits) and the last two bits
+  // of the previous character is ignored, for a total of 8 ignored bits, therefore
+  // producing one fewer byte of output. This is repeated if the second-to-last character
+  // is '='. One more byte must be allocated to account for Base64Decode's null-padding
+  // of its output.
+  if (UNLIKELY((in_len & 3) != 0)) return false;
+  *out_max = 1 + 3 * (in_len / 4);
+  if (in[in_len - 1] == '=') {
+    --(*out_max);
+    if (in[in_len - 2] == '=') {
+      --(*out_max);
+    }
   }
+  return true;
+}
 
-  // Remove trailing '\0' that were added as padding.  Since \0 is special,
-  // the boost functions get confused so do this manually.
-  int num_padded_chars = 0;
-  for (int i = out->size() - 1; i >= 0; --i) {
-    if ((*out)[i] != '\0') break;
-    ++num_padded_chars;
-  }
-  out->resize(out->size() - num_padded_chars);
+bool Base64Decode(const char* in, int64_t in_len, int64_t out_max, char* out,
+    int64_t* out_len) {
+  if (UNLIKELY((in_len & 3) != 0)) return false;
+  const int decode_result = sasl_decode64(in, static_cast<unsigned>(in_len), out,
+      static_cast<unsigned>(out_max), reinterpret_cast<unsigned*>(out_len));
+  if (UNLIKELY(decode_result != SASL_OK || *out_len != out_max - 1)) return false;
   return true;
 }
 
